extras/cilium-extras/CiliumClusterwideNetworkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-all-ingress-except-cidr
spec:
  endpointSelector: {}
  ingressDeny:
  - fromEntities:
    - world
  ingress:
  - fromCIDR:  # Allows ingress from a specific CIDR as an exception
    - 87.68.252.35/32
# apiVersion: cilium.io/v2
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: deny-all-ingress-except-cidr-and-ssh
# spec:
#   nodeSelector:
#     matchLabels: {}
#   ingressDeny:
#   - fromEntities:
#     - world   # Deny all ingress traffic from world by default
#   ingress:
#   - fromCIDR:
#     - 87.68.252.35/32   # Allow from this specific CIDR
#     - 100.64.0.0./10
#   - fromEntities:
#     - world              # Allow ingress from world
#     toPorts:
#     - ports:
#       - port: "22"
#         protocol: TCP    # but only on TCP port 22
# apiVersion: cilium.io/v2
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: deny-all-ingress-except-cidr
# spec:
#   nodeSelector:
#     # apply to all nodes
#     matchLabels: {}
#   ingressDeny:
#   - fromEntities:
#     - world
#   ingress:
#   - fromCIDR:  # Allows ingress from a specific CIDR as an exception
#     - 87.68.252.35/32
# apiVersion: cilium.io/v2
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: deny-world-allow-cidr-ssh-icmp
# spec:
#   description: "Deny all ingress from world to nodes, allow all ingress from 100.64.0.0/10, allow SSH and ICMP from world"
#   nodeSelector:
#     # apply to all nodes
#     matchLabels: {}#   
#     ingress:
#   - fromCIDR:
#     - 100.64.0.0/10
#   - fromEntities:
#     - world
#     toPorts:
#     - ports:
#       - port: "22"
#         protocol: TCP
#   - fromEntities:
#     - world
#     icmps:
#     - fields:
#       - type: 8
#         family: IPv4
# apiVersion: cilium.io/v2
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: allow-cluster-and-cidr
# spec:
#   endpointSelector: {}  # matches all pods
#   ingress:
#   # - fromEntities:
#   #   - cluster          # allow traffic originating from within the cluster
#   - fromCIDR:
#     - 100.64.0.0/10    # allow traffic from this CIDR block
#     - 10.42.0.0/16     # allow traffic from this additional CIDR block
